--- a/package.json
+++ b/package.json
@@ -2,6 +2,6 @@
   "name": "chat-app",
   "scripts": {
     "build": "cd client && npm install && npm run build && cd ../server && tsc",
-    "start": " node server/dist/index.js"
+    "start": "tsc && node server/dist/index.js"
   }
 }
