--- a/server/package.json
+++ b/server/package.json
@@ -5,13 +5,26 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "start": "tsx watch ./src/index.ts"
+    "start": "tsx watch ./src/index.ts",
+    "build": "tsc",
+    "tsc": "tsc --noEmit",
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix .",
+    "format": "prettier --write ."
+  },
+  "imports": {
+    "#*": "./src/*"
   },
   "devDependencies": {
+    "@eslint/js": "^9.30.1",
     "@types/express": "^5.0.1",
-    "@types/node": "^22.15.18",
+    "@types/node": "^22.16.2",
+    "eslint": "^9.30.1",
+    "eslint-plugin-perfectionist": "^4.15.0",
+    "prettier": "^3.6.2",
     "ts-node-dev": "^2.0.0",
-    "tsx": "^4.19.4"
+    "tsx": "^4.19.4",
+    "typescript-eslint": "^8.36.0"
   },
   "dependencies": {
     "dotenv": "^16.5.0",
