--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -110,7 +110,9 @@
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true /* Skip type checking all .d.ts files. */,
 
-    "outDir": "./dist"
+    "outDir": "./dist",
+    "rootDir": "./"
   },
+  "include": ["**/*.ts"],
   "exclude": ["dist", "node_modules"]
 }
