--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -111,7 +111,7 @@
     "skipLibCheck": true /* Skip type checking all .d.ts files. */,
 
     "outDir": "./dist",
-    "rootDir": "./"
+    "rootDir": "./src"
   },
   "include": ["**/*.ts"],
   "exclude": ["dist", "node_modules"]
