--- a/client/tsconfig.app.json
+++ b/client/tsconfig.app.json
@@ -25,8 +25,9 @@
     "baseUrl": ".",
     "paths": {
       "@icons/*": ["images/icons/*"],
+      "@pages/*": ["src/pages/*"],
       "@/*": ["src/*"]
     }
   },
-  "include": ["src", "images/icons"]
+  "include": ["src"]
 }
