--- a/server/package.json
+++ b/server/package.json
@@ -27,11 +27,14 @@
     "typescript-eslint": "^8.36.0"
   },
   "dependencies": {
+    "@types/validator": "^13.15.2",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "extensionless": "^1.9.9",
+    "mongoose": "^8.17.1",
     "next": "^15.3.2",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "validator": "^13.15.15"
   }
 }
