--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "start": "tsx watch ./src/index.ts",
+    "start": "cross-env NODE_ENV=development tsx watch ./src/index.ts",
     "build": "tsc",
     "tsc": "tsc --noEmit",
     "lint": "eslint .",
@@ -17,7 +17,11 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
+    "@types/compression": "^1.8.1",
+    "@types/cookie-parser": "^1.4.9",
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.1",
+    "@types/express-fileupload": "^1.5.1",
     "@types/node": "^22.16.2",
     "eslint": "^9.30.1",
     "eslint-plugin-perfectionist": "^4.15.0",
@@ -27,11 +31,20 @@
     "typescript-eslint": "^8.36.0"
   },
   "dependencies": {
+    "@types/morgan": "^1.9.10",
     "@types/validator": "^13.15.2",
+    "compression": "^1.8.1",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
+    "cross-env": "^10.0.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "express-fileupload": "^1.5.2",
+    "express-mongo-sanitize": "^2.2.0",
     "extensionless": "^1.9.9",
+    "helmet": "^8.1.0",
     "mongoose": "^8.17.1",
+    "morgan": "^1.10.1",
     "next": "^15.3.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
