--- a/server/package.json
+++ b/server/package.json
@@ -48,6 +48,7 @@
     "next": "^15.3.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "validator": "^13.15.15"
+    "validator": "^13.15.15",
+    "winston": "^3.17.0"
   }
 }
