--- a/server/package.json
+++ b/server/package.json
@@ -49,6 +49,7 @@
     "next": "^15.3.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "trim-request": "^1.0.6",
     "validator": "^13.15.15",
     "winston": "^3.17.0"
   }
