--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.1",
     "@types/express-fileupload": "^1.5.1",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^22.16.2",
     "eslint": "^9.30.1",
     "eslint-plugin-perfectionist": "^4.15.0",
