--- a/server/package.json
+++ b/server/package.json
@@ -42,6 +42,7 @@
     "express": "^5.1.0",
     "express-fileupload": "^1.5.2",
     "express-mongo-sanitize": "^2.2.0",
+    "express-validator": "^7.2.1",
     "extensionless": "^1.9.9",
     "helmet": "^8.1.0",
     "http-errors": "^2.0.0",
