--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.1",
     "@types/express-fileupload": "^1.5.1",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^22.16.2",
     "eslint": "^9.30.1",
@@ -48,6 +49,7 @@
     "extensionless": "^1.9.9",
     "helmet": "^8.1.0",
     "http-errors": "^2.0.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.1",
     "morgan": "^1.10.1",
     "next": "^15.3.2",
