Add file upload component, upload image while registering user

--- a/client/tsconfig.app.json
+++ b/client/tsconfig.app.json
@@ -25,6 +25,7 @@
     "baseUrl": ".",
     "paths": {
       "@icons/*": ["images/icons/*"],
+      "@components/*": ["src/components/*"],
       "@pages/*": ["src/pages/*"],
       "@features/*": ["src/features/*"],
       "@/*": ["src/*"]
