--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "@types/express-fileupload": "^1.5.1",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/mongoose": "^5.11.97",
+    "@types/multer": "^2.0.0",
     "@types/node": "^22.16.2",
     "eslint": "^9.30.1",
     "eslint-plugin-perfectionist": "^4.15.0",
@@ -37,13 +38,13 @@
     "@types/morgan": "^1.9.10",
     "@types/validator": "^13.15.2",
     "bcrypt": "^6.0.0",
+    "cloudinary": "^2.7.0",
     "compression": "^1.8.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "cross-env": "^10.0.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "express-fileupload": "^1.5.2",
     "express-mongo-sanitize": "^2.2.0",
     "express-validator": "^7.2.1",
     "extensionless": "^1.9.9",
@@ -52,9 +53,11 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.1",
     "morgan": "^1.10.1",
+    "multer": "^2.0.2",
     "next": "^15.3.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "streamifier": "^0.1.1",
     "trim-request": "^1.0.6",
     "validator": "^13.15.15",
     "winston": "^3.17.0"
